[gd_scene load_steps=31 format=3 uid="uid://c62j7aiwvcjda"]

[ext_resource type="Script" path="res://Script/UI/ESCMenu/pause_menu.gd" id="1_aisc1"]
[ext_resource type="Script" path="res://Script/UI/HUD/status_bar.gd" id="3_1dtdw"]
[ext_resource type="Texture2D" uid="uid://bdk6t6ouad607" path="res://Art/UI/ui_hp_bar_fill.png" id="3_do2tk"]
[ext_resource type="Resource" uid="uid://dot44gd0wwyic" path="res://Script/Player/Event/HP_Event.tres" id="5_5wbci"]
[ext_resource type="StyleBox" uid="uid://dmmoqnu1vcbi" path="res://ResourceData/StyleBox/button_main_menu.tres" id="7_20wfa"]
[ext_resource type="Resource" uid="uid://cyla5i0xjaskn" path="res://Script/Player/Event/MP_Event.tres" id="8_dr1ct"]
[ext_resource type="FontFile" uid="uid://c5fpksk7u1rcn" path="res://ResourceData/Font/Maitree-Bold.ttf" id="10_mvonx"]
[ext_resource type="Texture2D" uid="uid://dfcbq0t5gh3it" path="res://Art/UI/panel-border-007.png" id="11_hr0p6"]
[ext_resource type="Texture2D" uid="uid://o4426trj0b4j" path="res://Art/UI/panel-border-023.png" id="11_kaqna"]
[ext_resource type="Script" path="res://Script/System/DisplayText/popup.gd" id="12_jdfm0"]
[ext_resource type="Resource" uid="uid://byoer52eg2g0h" path="res://ResourceData/Event/powerup_event_resource.tres" id="13_h60o1"]
[ext_resource type="Texture2D" uid="uid://b2ghjo6da5elg" path="res://Art/UI/panel-001.png" id="14_ssfhs"]
[ext_resource type="Script" path="res://Script/Player/UI/active_skill_display.gd" id="15_n5ibt"]
[ext_resource type="Resource" uid="uid://t3hmdbc8tu21" path="res://ResourceData/Event/active_skill_status.tres" id="16_lc2q8"]
[ext_resource type="Script" path="res://Script/System/fps_counter.gd" id="17_041yv"]
[ext_resource type="Shader" path="res://Shader/blur.gdshader" id="18_jwncr"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fndpf"]
texture = ExtResource("3_do2tk")
texture_margin_left = 3.91732
texture_margin_right = 3.94997

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lncpf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4ho6e"]
texture = ExtResource("3_do2tk")
texture_margin_left = 3.91732
texture_margin_right = 3.94997
modulate_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3nlr4"]
texture = ExtResource("3_do2tk")
texture_margin_left = 3.91732
texture_margin_right = 3.94997
modulate_color = Color(0, 0.992157, 1, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6vtok"]
texture = ExtResource("3_do2tk")
texture_margin_left = 3.91732
texture_margin_right = 3.94997
modulate_color = Color(0, 0.580392, 0.984314, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6vdrb"]
texture = ExtResource("11_hr0p6")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6r5mw"]
shader = ExtResource("18_jwncr")
shader_parameter/lod = 1.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_64hno"]
texture = ExtResource("11_hr0p6")
texture_margin_left = 50.0
texture_margin_top = 50.0
texture_margin_right = 50.0
texture_margin_bottom = 50.0

[sub_resource type="LabelSettings" id="LabelSettings_agah8"]
font = ExtResource("10_mvonx")
font_size = 50

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_u1pg0"]
texture = ExtResource("11_kaqna")
texture_margin_left = 50.0
texture_margin_top = 50.0
texture_margin_right = 50.0
texture_margin_bottom = 50.0
region_rect = Rect2(0, -1, 97, 97)

[sub_resource type="LabelSettings" id="LabelSettings_oe8y5"]
font_size = 30

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xq3v1"]
texture = ExtResource("14_ssfhs")
texture_margin_left = 50.0
texture_margin_top = 10.0
texture_margin_right = 50.0
texture_margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rhhvw"]
texture = ExtResource("14_ssfhs")
texture_margin_left = 50.0
texture_margin_top = 20.0
texture_margin_right = 50.0
texture_margin_bottom = 20.0
modulate_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ipdu6"]
font_size = 25

[node name="HUD" type="CanvasLayer"]
layer = 50

[node name="Status" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 941.0
offset_bottom = 268.0

[node name="HP bar" type="ProgressBar" parent="Status" node_paths=PackedStringArray("indicator")]
custom_minimum_size = Vector2(100, 20)
layout_mode = 0
offset_left = 170.0
offset_top = 57.0
offset_right = 450.0
offset_bottom = 77.0
theme_override_styles/fill = SubResource("StyleBoxTexture_fndpf")
max_value = 10.0
value = 5.0
show_percentage = false
script = ExtResource("3_1dtdw")
hp_event = ExtResource("5_5wbci")
indicator = NodePath("Indicator")
lerp_time = 0.5

[node name="Indicator" type="ProgressBar" parent="Status/HP bar"]
show_behind_parent = true
z_index = -1
custom_minimum_size = Vector2(100, 20)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -10.0
offset_right = 140.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_lncpf")
theme_override_styles/fill = SubResource("StyleBoxTexture_4ho6e")
max_value = 10.0
value = 6.0
show_percentage = false

[node name="MP bar" type="ProgressBar" parent="Status" node_paths=PackedStringArray("indicator")]
custom_minimum_size = Vector2(100, 20)
layout_mode = 0
offset_left = 170.0
offset_top = 81.0
offset_right = 313.0
offset_bottom = 101.0
theme_override_styles/fill = SubResource("StyleBoxTexture_3nlr4")
value = 50.0
show_percentage = false
script = ExtResource("3_1dtdw")
hp_event = ExtResource("8_dr1ct")
indicator = NodePath("Indicator")

[node name="Indicator" type="ProgressBar" parent="Status/MP bar"]
show_behind_parent = true
z_index = -1
custom_minimum_size = Vector2(100, 20)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.5
offset_top = -10.0
offset_right = 71.5
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_lncpf")
theme_override_styles/fill = SubResource("StyleBoxTexture_6vtok")
max_value = 10.0
value = 6.0
show_percentage = false

[node name="Panel" type="Panel" parent="Status"]
layout_mode = 0
offset_left = 88.0
offset_top = 16.0
offset_right = 148.0
offset_bottom = 75.0
rotation = 0.785398
scale = Vector2(1.5, 1.5)
theme_override_styles/panel = SubResource("StyleBoxTexture_6vdrb")

[node name="Pause" type="Control" parent="." node_paths=PackedStringArray("defualt_button")]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aisc1")
defualt_button = NodePath("Control/BG/Panel/VBoxContainer2/MarginContainer2/VBoxContainer/Continue")

[node name="blur" type="ColorRect" parent="Pause"]
material = SubResource("ShaderMaterial_6r5mw")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="Pause"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="ColorRect" parent="Pause/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -189.0
offset_top = -279.0
offset_right = 256.0
offset_bottom = 237.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.188235, 0.188235, 0.188235, 0.894118)

[node name="Panel" type="Panel" parent="Pause/Control/BG"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -221.5
offset_top = -257.5
offset_right = 221.5
offset_bottom = 257.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_64hno")

[node name="VBoxContainer2" type="VBoxContainer" parent="Pause/Control/BG/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Pause/Control/BG/Panel/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_bottom = 50

[node name="Label" type="Label" parent="Pause/Control/BG/Panel/VBoxContainer2/MarginContainer"]
layout_mode = 2
text = "OPTIONS"
label_settings = SubResource("LabelSettings_agah8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="Pause/Control/BG/Panel/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/Control/BG/Panel/VBoxContainer2/MarginContainer2"]
show_behind_parent = true
layout_mode = 2
alignment = 1

[node name="Continue" type="Button" parent="Pause/Control/BG/Panel/VBoxContainer2/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Settings")
focus_next = NodePath("../Settings")
theme_override_styles/hover = ExtResource("7_20wfa")
text = "Continue"

[node name="Settings" type="Button" parent="Pause/Control/BG/Panel/VBoxContainer2/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_neighbor_top = NodePath("../Continue")
focus_neighbor_bottom = NodePath("../Main menu")
theme_override_styles/hover = ExtResource("7_20wfa")
text = "Settings"

[node name="Main menu" type="Button" parent="Pause/Control/BG/Panel/VBoxContainer2/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_neighbor_top = NodePath("../Settings")
focus_neighbor_bottom = NodePath("../Quit")
theme_override_styles/hover = ExtResource("7_20wfa")
text = "Exit to main menu"

[node name="Quit" type="Button" parent="Pause/Control/BG/Panel/VBoxContainer2/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_neighbor_top = NodePath("../Main menu")
focus_neighbor_bottom = NodePath("../Continue")
theme_override_styles/hover = ExtResource("7_20wfa")
text = "Exit Game"

[node name="DisplayPanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -464.0
offset_top = -484.0
offset_right = 464.0
offset_bottom = 293.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_u1pg0")
script = ExtResource("12_jdfm0")
display_event = ExtResource("13_h60o1")

[node name="ColorRect" type="ColorRect" parent="DisplayPanel"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.792157)

[node name="Label" type="Label" parent="DisplayPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -32.5
offset_bottom = 9.5
grow_horizontal = 2
grow_vertical = 2
text = "Dash ability unlock"
label_settings = SubResource("LabelSettings_oe8y5")
horizontal_alignment = 1

[node name="Button" type="Button" parent="DisplayPanel"]
layout_mode = 0
offset_left = 368.0
offset_top = 672.0
offset_right = 562.0
offset_bottom = 734.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_xq3v1")
theme_override_styles/hover = SubResource("StyleBoxTexture_rhhvw")
text = "Close"

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(100, 0)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -49.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="FPSCounter" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "FPS:"
label_settings = SubResource("LabelSettings_ipdu6")
script = ExtResource("17_041yv")

[node name="SkillDisplay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Skill_1" type="ProgressBar" parent="SkillDisplay"]
layout_mode = 0
offset_left = 56.0
offset_top = 48.0
offset_right = 120.0
offset_bottom = 112.0
max_value = 1.0
value = 1.0
fill_mode = 3
show_percentage = false
script = ExtResource("15_n5ibt")
skill_status = ExtResource("16_lc2q8")

[node name="TextureRect" type="TextureRect" parent="SkillDisplay/Skill_1"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -64.0
offset_right = 64.0
grow_vertical = 0
expand_mode = 1

[connection signal="pressed" from="Pause/Control/BG/Panel/VBoxContainer2/MarginContainer2/VBoxContainer/Continue" to="Pause" method="_on_continue_pressed"]
[connection signal="pressed" from="Pause/Control/BG/Panel/VBoxContainer2/MarginContainer2/VBoxContainer/Settings" to="Pause" method="_on_settings_pressed"]
[connection signal="pressed" from="Pause/Control/BG/Panel/VBoxContainer2/MarginContainer2/VBoxContainer/Main menu" to="Pause" method="on_to_menu_press"]
[connection signal="pressed" from="Pause/Control/BG/Panel/VBoxContainer2/MarginContainer2/VBoxContainer/Quit" to="Pause" method="_on_quit_pressed"]
[connection signal="pressed" from="DisplayPanel/Button" to="DisplayPanel" method="hide_layout"]
